tests/paczka1/fuzzy1/26739270.err
Error in line 3: 1Qi6nN41a A657 22,4
Error in line 6: 3mWs A657 4,0
Error in line 13: NzXBPAm A464 55,1
Error in line 7: 1Qi6nN41a A464 31,6
Error in line 18: w1v8UQ A464 68,0
Error in line 20: 1Qi6nN41a S550 -1,17
Error in line 26: S550 A464 35,7
Error in line 21: acPwT5nzDMP S550 216,0
Error in line 29: w1v8UQ S846 12,5
Error in line 36: S550 S846 33,5
